test/data/invalid_models/include_multiple_models/model.sdf
<?xml version="1.0" ?>
<sdf version="1.5">
    <model name="simple test model">
        <include>
            <uri>model://composite_model</uri>
        </include>
    </model>
</sdf>
